# pvit-lb4

./: .gitignore  manage.py  pyproject.toml
accisibility_tester/: asgi.py  settings.py  urls.py  wsgi.py
analyzer/: accessibility_tester.py  admin.py  forms.py  models.py  urls.py  views.py
analyzer/migrations/: 0001_initial.py  0002_websitescan_screenshot.py
analyzer/templates/: base.html  check_form.html  my_scans.html  results.html
templates/registration/: login.html  register.html
